# soletra-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  default.nix  flake.nix  generate-games.nix  generate-games.py  shell.nix
locales/: soletra-rs.yaml
npins/: sources.json
src/: app.rs  game.rs  generate.rs  language.rs  main.rs  normalize.rs  widgets.rs
