[package]
name = "soletra-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
app_dirs2 = "2.5.5"
async-channel = "2.5.0"
blocking = "1.6.2"
color-eyre = "0.6.5"
crossterm = "0.29.0"
rand = "0.10.0"
rand_chacha = "0.10.0"
ratatui = { version = "0.30.0", features = ["unstable-rendered-line-info"] }
rust-i18n = "4.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
smol = "2.0.2"
tachyonfx = "0.25.0"
tui-overlay = "0.1.2"
tui-scrollview = "0.6.3"
