[package]
name = "soletra-rs"
version = "0.1.1"
edition = "2024"
description = "TUI version of the game Soletra/Spelling Bee"
repository = "https://git.eric.dev.br/EpicEric/soletra-rs"
license = "MIT"
authors = ["Eric Rodrigues Pires <eric@eric.dev.br>"]
readme = "README.md"
keywords = ["tui", "spelling-bee", "spelling", "game"]
categories = ["games"]

[dependencies]
app_dirs2 = "2.5.5"
async-channel = "2.5.0"
async-compat = "0.2.5"
color-eyre = "0.6.5"
crossterm = { version = "0.29.0", features = ["event-stream"] }
feruca = "0.11.5"
itertools = "0.14.0"
rand = "0.10.0"
rand_chacha = "0.10.0"
ratatui = { version = "0.30.0", features = ["unstable-rendered-line-info"] }
reqwest = "0.13.2"
rust-i18n = "4.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
smol = "2.0.2"
tachyonfx = "0.25.0"
throbber-widgets-tui = "0.11.0"
tui-overlay = "0.1.2"
tui-scrollview = "0.6.3"
